# project-help-backend

./: .gitignore  alembic.ini  db.sqlite3  items_views.py  main.py  pyproject.toml  pyvenv.cfg  requiments.txt
Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
alembic/: env.py
alembic/versions/: 2024_07_25_0955-ade50579cdb5_create_organizations_table.py  2024_07_25_1018-bc959a7da152_create_users_table.py  2024_07_25_1026-2ec92fc4f8d0_create_posts_table.py  2a68cd6ec410_add_organizations_table.py  8a153de14882_create_users_table.py  f88a9f5f9a01_add_password_field_to_users_model.py
api_v1/: __init__.py
api_v1/organizatios/: crud.py  dependencies.py  schemas.py  views.py
app/: main.py
app/api/v1/endpoints/: choices.py  crud.py  questions.py  schemas.py
app/api_v1/: __init__.py
app/api_v1/auth/: dependencies.py  schemas.py  utils.py  views.py
app/api_v1/choices/: crud.py  schemas.py  views.py
app/api_v1/organizations/: crud.py  schemas.py  views.py
app/api_v1/questions/: crud.py  schemas.py  views.py
app/api_v1/users/: crud.py  dependencies.py  schemas.py  views.py
app/core/: config.py
app/db/: datebase.py  models.py
core/: config.py
core/models/: __init__.py  db_helper.py  organization.py  post.py  user.py
users/: crud.py
